# awesome-harness

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
examples/: simulated_trace.txt
src/awesome_harness/: __init__.py  demo.py  harness.py  models.py  policy.py  tools.py  types.py  workspace.py
tests/: test_policy_and_tools.py
